--- a/src/nav/components.yml
+++ b/src/nav/components.yml
@@ -77,7 +77,7 @@
         - id: /components/spinner
           title: Spinner
     - title: Modal
-      id: https://zendeskgarden.github.io/react-components/modals
+      id: /components/modal
     - title: Notification
       items:
         - id: https://zendeskgarden.github.io/react-components/notifications
